--- a/Sinflex.Web/Views/Shared/_Layout.cshtml
+++ b/Sinflex.Web/Views/Shared/_Layout.cshtml
@@ -4,10 +4,7 @@
 <head>
     <!-- Basic Page Needs -->
     <meta charset="utf-8">
-    <title>AMovie-Typography</title>
-    <meta name="description" content="A Template by Gozha.net">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="author" content="Gozha.net">
+    <title>Sinflex-Typography</title>
 
     <!-- Mobile Specific Metas-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
